test/suites/fail-lower/L-003.expected
  × One or more errors occured.

Error: L-003

  × d must be used as destructor
   ╭─[L-003.pol:7:15]
 6 │ def Unit.foo : ? {
 7 │     MkUnit => d
   ·               ─
 8 │ }
   ╰────
