test/suites/fail-lower/L-003.xfn
data Bool { True, False }
codata Foo { d : Bool }

data Unit { MkUnit }

def Unit.foo : ? {
    MkUnit => d
}

